Fix URL constructor deprecation warning